--- a/leetsandbox/frontend/problemList.html
+++ b/leetsandbox/frontend/problemList.html
@@ -4,22 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LeetSandbox - Problems</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="container-fluid">
         <ul>
-            <li><a href="index.html" class="contrast"><strong>LeetSandbox</strong></a></li>
+            <li>
+                <a href="index.html" class="contrast nav-brand">
+                    <img src="assets/logo.png" alt="LeetSandbox Logo">
+                    <strong>LeetSandbox</strong>
+                </a>
+            </li>
         </ul>
         <ul>
             <li><a href="problemList.html">Problem List</a></li>
-            <li><a href="#" role="button" class="secondary">Request Problems</a></li>
+            <li><a href="problemList.html" role="button">Get Started</a></li>
         </ul>
     </nav>
 
     <main class="container">
-        <header>
+        <header style="text-align: center; padding: 2rem 0;">
             <h1>Available Problems</h1>
             <p>Select a problem to begin.</p>
         </header>
