--- a/leetsandbox/frontend/index.html
+++ b/leetsandbox/frontend/index.html
@@ -4,17 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LeetSandbox - Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="container-fluid">
         <ul>
-            <li><a href="index.html" class="contrast"><strong>LeetSandbox</strong></a></li>
+            <li>
+                <a href="index.html" class="contrast nav-brand">
+                    <img src="assets/logo.png" alt="LeetSandbox Logo">
+                    <strong>LeetSandbox</strong>
+                </a>
+            </li>
         </ul>
         <ul>
             <li><a href="problemList.html">Problem List</a></li>
-            <li><a href="#" role="button" class="secondary">Request Problems</a></li>
+            <li><a href="problemList.html" role="button">Get Started</a></li>
         </ul>
     </nav>
 
@@ -22,7 +30,10 @@
         <section class="hero">
             <h1>Leet<span class="hero-sandbox">Sandbox</span></h1>
             <p>Test your own cases. Spot patterns. Master LeetCode.</p>
-            <a href="problemList.html" role="button" class="contrast">Browse Problems</a>
+            <a href="problemList.html" role="button" class="contrast btn-with-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+                Browse Problems
+            </a>
         </section>
 
         <div class="grid">
