--- a/leetsandbox/frontend/index.html
+++ b/leetsandbox/frontend/index.html
@@ -15,8 +15,7 @@
         <ul>
             <li>
                 <a href="index.html" class="contrast nav-brand">
-                    <img src="assets/logo.png" alt="LeetSandbox Logo">
-                    <strong>LeetSandbox</strong>
+                    LeetSandbox
                 </a>
             </li>
         </ul>
@@ -37,11 +36,17 @@
         </section>
 
         <div class="grid">
-            <article>
+            <article class="info-card">
+                <div class="info-card-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="23 6 13.5 15.5 8.5 10.5 1 18"></polyline><polyline points="17 6 23 6 23 12"></polyline></svg>
+                </div>
                 <h3>Comprehensive Test Cases</h3>
                 <p>Go beyond the 2-3 examples provided. Create dozens of test cases to understand problem patterns and edge cases.</p>
             </article>
-            <article>
+            <article class="info-card">
+                <div class="info-card-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><ellipse cx="12" cy="5" rx="9" ry="3"></ellipse><path d="M21 12c0 1.66-4 3-9 3s-9-1.34-9-3"></path><path d="M3 5v14c0 1.66 4 3 9 3s9-1.34 9-3V5"></path></svg>
+                </div>
                 <h3>Deep Problem Insights</h3>
                 <p>Understand what makes problems tick by examining their test case distributions and constraints.</p>
             </article>
