--- a/leetsandbox/frontend/problem.html
+++ b/leetsandbox/frontend/problem.html
@@ -30,8 +30,7 @@
         <ul>
             <li>
                 <a href="index.html" class="contrast nav-brand">
-                    <img src="assets/logo.png" alt="LeetSandbox Logo">
-                    <strong>LeetSandbox</strong>
+                    LeetSandbox
                 </a>
             </li>
         </ul>
