--- a/leetsandbox/frontend/problemList.html
+++ b/leetsandbox/frontend/problemList.html
@@ -15,13 +15,13 @@
         <ul>
             <li>
                 <a href="index.html" class="contrast nav-brand">
-                    LeetSandbox
+                    Leet<strong>Sandbox</strong>
                 </a>
             </li>
         </ul>
         <ul>
-            <li><a href="problemList.html">Problem List</a></li>
-            <li><a href="problemList.html" role="button">Get Started</a></li>
+            <li><a href="problemList.html" role="button" class="secondary">Problem List</a></li>
+            <li><a href="request.html" role="button">Request Problems</a></li>
         </ul>
     </nav>
 
