--- a/leetsandbox/frontend/index.html
+++ b/leetsandbox/frontend/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li>
                 <a href="index.html" class="contrast nav-brand">
-                    Leet<strong>Sandbox</strong>
+                    Leet<strong class="brand-highlight">Sandbox</strong>
                 </a>
             </li>
         </ul>
