--- a/leetsandbox/frontend/problemList.html
+++ b/leetsandbox/frontend/problemList.html
@@ -45,7 +45,10 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            const API_URL = 'http://127.0.0.1:8001/problems';
+            // Dynamically set API URL based on hostname
+            const isLocal = window.location.hostname === '127.0.0.1' || window.location.hostname === 'localhost';
+            const API_URL = isLocal ? 'http://127.0.0.1:8001/problems' : 'https://leetsandbox-api.onrender.com/problems'; // <-- IMPORTANT
+            
             const container = document.getElementById('problem-folders-container');
 
             fetch(API_URL)
