--- a/leetsandbox/frontend/request.html
+++ b/leetsandbox/frontend/request.html
@@ -58,9 +58,9 @@
 
     <footer class="container">
         <small>
-            <a href="#">About</a> • <a href="#">Contact</a> • <a href="#">Privacy Policy</a>
+            <a href="report.html">Report</a> • <a href="#">Contact</a> • <a href="#">Privacy Policy</a>
             <br>
-            © 2024 LeetSandbox
+            © 2025 LeetSandbox
         </small>
     </footer>
 </body>
