--- a/leetsandbox/frontend/problem.html
+++ b/leetsandbox/frontend/problem.html
@@ -46,6 +46,8 @@
             <a href="problemList.html">← Back to problems</a>
         </header>
 
+        <div id="constraints-notice-container"></div>
+
         <section>
             <form id="run-form">
                 <h2>Inputs</h2>
