--- a/leetsandbox/frontend/report.html
+++ b/leetsandbox/frontend/report.html
@@ -28,7 +28,7 @@
     <main class="container">
         <header style="text-align: center; padding: 2rem 0;">
             <h1>Report a Problem</h1>
-            <p>The platform is still very new, and so we would really appreciate any suggestions or any problems you may encounter. Thanks so much!</p>
+            <p>The platform is still very new, and so we would really appreciate any suggestions you may have. Thanks so much!</p>
         </header>
         
         <div class="form-container">
@@ -39,6 +39,9 @@
                     <input type="text" name="firstName" placeholder="First Name" required>
                     <input type="text" name="lastName" placeholder="Last Name" required>
                 </div>
+
+                <label for="email">Email *</label>
+                <input type="email" name="email" placeholder="example@example.com" required>
 
                 <label for="details">Please explain what your suggestion is, or what the problem you are encountering is. Thanks for your support!</label>
                 <textarea name="details" rows="5"></textarea>
