--- a/leetsandbox/frontend/request.html
+++ b/leetsandbox/frontend/request.html
@@ -27,7 +27,7 @@
 
     <main class="container">
         <header style="text-align: center; padding: 2rem 0;">
-            <h1>Request a Problem</h1>
+            <h1>Request a New Problem</h1>
             <p>If you have any problems you would like added to the platform please create a request below. We are always looking for problems and things to expand the platform. Thanks in advance! PS: It can be any source not just leetcode.</p>
         </header>
         
@@ -56,12 +56,14 @@
         
     </main>
 
-    <footer class="container">
-        <small>
-            <a href="report.html">Report</a> • <a href="#">Contact</a> • <a href="#">Privacy Policy</a>
-            <br>
-            © 2025 LeetSandbox
-        </small>
+    <footer>
+        <div class="container">
+            <small>
+                <a href="#">About</a> • <a href="report.html">Contact</a> • <a href="#">Privacy Policy</a>
+                <br>
+                © 2025 LeetSandbox
+            </small>
+        </div>
     </footer>
 </body>
 </html> 
