--- a/leetsandbox/frontend/problem.html
+++ b/leetsandbox/frontend/problem.html
@@ -41,14 +41,13 @@
     </nav>
 
     <main class="container">
-        <header>
+        <header class="problem-header">
             <h1 id="problem-title" class="capitalize">Loading Problem...</h1>
             <a href="problemList.html">← Back to problems</a>
         </header>
 
-        <div id="constraints-notice-container"></div>
-
         <section>
+            <p class="problem-page-notice">Solutions are programmed with intended constraints in mind. Please check out the problem descriptions for such constraints for your test cases.</p>
             <form id="run-form">
                 <h2>Inputs</h2>
                 <div id="input-fields" aria-busy="true"></div>
@@ -62,12 +61,14 @@
         </section>
     </main>
     
-    <footer class="container">
-        <small>
-            <a href="report.html">Report</a> • <a href="#">Contact</a> • <a href="#">Privacy Policy</a>
-            <br>
-            © 2025 LeetSandbox
-        </small>
+    <footer>
+        <div class="container">
+            <small>
+                <a href="#">About</a> • <a href="report.html">Contact</a> • <a href="#">Privacy Policy</a>
+                <br>
+                © 2025 LeetSandbox
+            </small>
+        </div>
     </footer>
 
     <script src="main.js"></script>
