--- a/leetsandbox/frontend/problemList.html
+++ b/leetsandbox/frontend/problemList.html
@@ -35,12 +35,14 @@
         </section>
     </main>
 
-    <footer class="container">
-        <small>
-            <a href="report.html">Report</a> • <a href="#">Contact</a> • <a href="#">Privacy Policy</a>
-            <br>
-            © 2025 LeetSandbox
-        </small>
+    <footer>
+        <div class="container">
+            <small>
+                <a href="#">About</a> • <a href="report.html">Contact</a> • <a href="#">Privacy Policy</a>
+                <br>
+                © 2025 LeetSandbox
+            </small>
+        </div>
     </footer>
 
     <script>
