--- a/leetsandbox/frontend/problem.html
+++ b/leetsandbox/frontend/problem.html
@@ -265,7 +265,7 @@
             </div>
             <div class="chat-messages" id="chatMessages">
                 <div class="message ai">
-                    Hi! I'm here to help you understand this problem. What would you like to know about the solution approach, algorithm, or any specific concepts?
+                    Hi! I'm here to help you understand this LeetCode problem. Ask me anything specific about the solution, or type "Help" for a general explanation of how the algorithm works.
                 </div>
             </div>
             <div class="typing-indicator" id="typingIndicator">
